Migrate CCFMaster to Java 25, jakarta.*, Spring 6.2 and Hibernate 6.6
Compiles on JDK 25 (class file major 69) and the test results are identical to the
JDK 8 baseline:

    baseline  Tests run: 486, Failures: 5, Errors: 7, Skipped: 2  -> 472 passing
    now       Tests run: 488, Failures: 5, Errors: 7, Skipped: 2  -> 474 passing

Class by class the two runs are the same except for one addition: Surefire 2.8.1's
default includes did not cover **/*Tests.java, so HibernateListTests was never run.
Surefire 3 does, and its 2 tests pass. All 12 pre-existing failures are still failing,
for the same reasons, in the same classes. No test was deleted, disabled or newly
excluded; the exclusion list (**/*_Roo_*, **/*SystemTest*) is untouched.

The 125 AspectJ ITDs in src/main and 72 in src/test are all still ITDs.

===============================================================================
OpenRewrite (see rewrite.yml)
===============================================================================
One run of com.collabnet.ccf.ccfmaster.MigrateToJava25 =
  com.collabnet.ccf.UpgradeToJava21WithoutSwitchRewrites
    (UpgradeToJava21 minus its six if/else-if-to-switch sub-recipes; the same
     composite as the core and gui repositories)
  org.openrewrite.java.migrate.UpgradeBuildToJava25
  org.openrewrite.java.migrate.UpgradePluginsForJava25
  org.openrewrite.java.spring.framework.UpgradeSpringFramework_6_2
  org.openrewrite.java.spring.security6.UpgradeSpringSecurity_6_4
  org.openrewrite.hibernate.MigrateToHibernate66
  org.openrewrite.hibernate.validator.HibernateValidator_8_0

It changed 165 files in 17 minutes and did the bulk of the namespace work:

  - all 437 javax.* import lines in .java rewritten to jakarta.*: javax.xml.bind
    (137), javax.servlet (109), javax.persistence (85), javax.validation (85),
    javax.annotation, javax.activation. The 27 that remain are JAXP and JMX, which
    are still javax in the JDK.
  - META-INF/persistence.xml: java.sun.com namespac