@@ -10,7 +10,7 @@ import static org.springframework.web.bind.annotation.RequestMethod.PUT;
 import java.rmi.RemoteException;
 import java.util.List;
 
-import javax.servlet.http.HttpServletResponse;
+import jakarta.servlet.http.HttpServletResponse;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -44,19 +44,19 @@ public abstract class AbstractApiLinkIdController<T> extends AbstractBaseApiCont
     @ResponseStatus(CREATED)
     @RequestMapping(method = POST)
     public abstract @ResponseBody
-    T create(@ModelAttribute(EXTERNAL_APP_MODELATTRIBUTE_NAME) ExternalApp ea,
+    T create(@ModelAttribute(value = EXTERNAL_APP_MODELATTRIBUTE_NAME, binding = false) ExternalApp ea,
             @RequestBody T requestBody, HttpServletResponse response);
 
     @ResponseStatus(NO_CONTENT)
     @RequestMapping(value = "/{id}", method = DELETE)
     public abstract void delete(
-            @ModelAttribute(EXTERNAL_APP_MODELATTRIBUTE_NAME) ExternalApp ea,
+            @ModelAttribute(value = EXTERNAL_APP_MODELATTRIBUTE_NAME, binding = false) ExternalApp ea,
             @PathVariable("id") Long id, HttpServletResponse response);
 
     @RequestMapping(method = GET)
     public abstract @ResponseBody
     List<T> list(
-            @ModelAttribute(EXTERNAL_APP_MODELATTRIBUTE_NAME) ExternalApp ea);
+            @ModelAttribute(value = EXTERNAL_APP_MODELATTRIBUTE_NAME, binding = false) ExternalApp ea);
 
     @ModelAttribute(EXTERNAL_APP_MODELATTRIBUTE_NAME)
     @PreAuthorize("isAuthenticated() and (hasRole('ROLE_ADMIN') or (principal.linkId == #linkId))")
@@ -78,7 +78,7 @@ public abstract class AbstractApiLinkIdController<T> extends AbstractBaseApiCont
             externalApp = ExternalApp.createNewExternalApp(linkId, connection);
 
         } else {
-            externalApp = externalApps.get(0);
+            externalApp = externalApps.getFirst();
         }
         this.externalApp = externalApp;
         return externalApp;
@@ -86,7 +86,7 @@ public abstract class AbstractApiLinkIdController<T> extends AbstractBaseApiCont
 
     @RequestMapping(value = "/{id}", method = GET)
     public abstract T show(
-            @ModelAttribute(EXTERNAL_APP_MODELATTRIBUTE_NAME) ExternalApp ea,
+            @ModelAttribute(value = EXTERNAL_APP_MODELATTRIBUTE_NAME, binding = false) ExternalApp ea,
             @PathVariable("id") Long id);
 
     /**
@@ -100,7 +100,7 @@ public abstract class AbstractApiLinkIdController<T> extends AbstractBaseApiCont
      */
     @RequestMapping(value = "/{id}", method = PUT)
     public abstract void update(
-            @ModelAttribute(EXTERNAL_APP_MODELATTRIBUTE_NAME) ExternalApp ea,
+            @ModelAttribute(value = EXTERNAL_APP_MODELATTRIBUTE_NAME, binding = false) ExternalApp ea,
             @PathVariable("id") Long id, @RequestBody T requestBody,
             HttpServletResponse response);
 }
